Migrate ByteBufferUtility to reflectively-resolved sun.misc.Unsafe
Replaces the direct `jdk.internal.misc.Unsafe` import with a reflective
lookup of `sun.misc.Unsafe.theUnsafe`. Two reasons:

1. `jdk.internal.misc.Unsafe` is encapsulated and requires
   `--add-exports java.base/jdk.internal.misc`, which `--release N`
   mode forbids (JEP 247/261). Migrating to `sun.misc.Unsafe`
   (always-exported via `jdk.unsupported`) is the prerequisite for
   switching the main compile to `--release 21`.

2. The static initializer wraps the reflective lookup in try/catch
   and stores the result in a `@Nullable Unsafe UNSAFE` field. On
   non-HotSpot JVMs that do not expose `theUnsafe` (OpenJ9, GraalVM
   Native Image, Android), `UNSAFE` becomes `null` rather than
   throwing `ExceptionInInitializerError`, and `freeByteBuffer`
   becomes a no-op — the JVM's built-in Cleaner reclaims the buffer
   when it becomes unreachable.

`freeByteBuffer` gains a null guard mirroring the existing `null`
and `!isDirect()` guards.